# py-money

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_money/: __init__.py  money.py
tests/: test_money.py
