[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-money"
version = "0.4.0"
description = "Precise monetary calculations using integer cents with currency support and formatting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["money", "currency", "finance", "decimal", "cents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-money#readme"
Repository = "https://github.com/philiprehberger/py-money"
Issues = "https://github.com/philiprehberger/py-money/issues"
Changelog = "https://github.com/philiprehberger/py-money/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_money"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
